added new components

--- a/src/packages/examples/material-ui-components/src/index.html
+++ b/src/packages/examples/material-ui-components/src/index.html
@@ -13,12 +13,12 @@
 <body>
     <div>
         <mwc-button label="favorite" icon="favorite" trailing-icon="true">
-            <div slot="abc">
-                Before...
-            </div>
+
             <div>
+
                 <b>More!</b>
             </div>
+
         </mwc-button>
     </div>
     <div>
@@ -56,13 +56,15 @@
     <div>
         <mwc-select>
             <div>
-
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="vw">VW</option>
-            <option value="audi" selected>Audi</option>
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+                <option value="vw">VW</option>
+                <option value="audi" selected>Audi</option>
             </div>
         </mwc-select>
+    </div>
+    <div>
+        <mwc-switch label="on/off" disabled="false"/>
     </div>
 </body>
 </html>
