added textfield switch and select

--- a/src/packages/examples/material-ui-components/src/index.html
+++ b/src/packages/examples/material-ui-components/src/index.html
@@ -64,5 +64,14 @@
     <div>
         <mwc-switch label="on/off" disabled="false"/>
     </div>
+    <div>
+        <mwc-textfield label="Name" value="Max Mustermann" disabled variant="outlined"/>
+    </div>
+    <div>
+        <mwc-textfield label="Name" variant="outlined"/>
+    </div>
+    <div>
+        <mwc-textfield label="Name" variant="filled"/>
+    </div>
 </body>
 </html>
