--- a/src/packages/examples/material-ui-components/src/index.html
+++ b/src/packages/examples/material-ui-components/src/index.html
@@ -71,7 +71,7 @@
         <mwc-textfield label="Name" variant="outlined"/>
     </div>
     <div>
-        <mwc-textfield label="Name" variant="filled"/>
+        <mwc-textfield label="Name" variant="filled" helper-text="sdfsdfssf"/>
     </div>
 </body>
 </html>
