MWCIconButton / mwc-icon-button

--- a/src/packages/examples/material-ui-components/src/index.html
+++ b/src/packages/examples/material-ui-components/src/index.html
@@ -76,5 +76,8 @@
     <div>
         Some material icon: <mwc-icon name="open_in_new" />
     </div>
+    <div>
+        <mwc-icon-button name-on="music_note" name-off="music_off" />
+    </div>
 </body>
 </html>
