- updated devtools to component - fix if panel already open # todo: fix loop for checking if chrome devtools is open

--- a/src/devtools/src/panel.html
+++ b/src/devtools/src/panel.html
@@ -25,7 +25,7 @@
 
 <ul>
     <li><code>window.$st</code> for application context</li>
-    <li><code>window.$ste</code> for the current inspected element's data</li>
+    <li><code>window.$stc</code> for the current inspected component data</li>
 </ul>
 
 <script src="panel.js" type="text/javascript"></script>
