--- a/src/devtools/src/popups/development.html
+++ b/src/devtools/src/popups/development.html
@@ -12,5 +12,7 @@
 </style>
 
 <p>
-    SpringType is available for debugging on this page. Mode: Development.
+    SpringType is available for debugging on this page.
+</p><p>
+    Mode: Development
 </p>
